--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <figure>
-           
+
             <img src="img/logo.png" alt="logo da escola">
         </figure>
         <div>
@@ -22,36 +22,27 @@
 
 
     </header>
+    <main>
 
 
-    <h2>Cardápio do dia</h2>
-    <h3>Segunda feira</h3>
-    <section>
-        <ul>
-            <li>Arroz</li>
-            <li>Feijão</li>
-            <li>Farofa</li>
-            <li>laranja</li>
-            <li>couve</li>
 
-        </ul>
-        <figure>
-            <img src="img/image 3.png">
-        </figure>
-    </section>
-    <form>
-        <h2>Você irá fazer a refeição hoje?</h2>
-        <div>
-            <label><input type="radio" name="radio" value="yes" /> SIM</label>
 
-            <label><input type="radio" name="radio" value="no" /> NÃO</label>
-            <figure>
-                
-                <img src="img/enviar.png">
-            </figure>
-        </div>
-    </form>
+    </main>
+            <footer>
+                <form>
+                    <h2>Você irá fazer a refeição hoje?</h2>
+                    <div>
+                        <label><input type="radio" name="radio" value="yes" /> SIM</label>
 
+                        <label><input type="radio" name="radio" value="no" /> NÃO</label>
+                        <figure>
+
+                            <img src="img/enviar.png">
+                        </figure>
+                    </div>
+                </form>
+            </footer>
+            <script src='script.js' type='module'></script>
 </body>
 
 </html>
